--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "lint": "tsc --noEmit && biome check --write"
   },
   "dependencies": {
-    "ts-error-tuple": "^1.0.0"
+    "ts-explicit-errors": "^2.2.0"
   },
   "devDependencies": {
-    "@adamhl8/configs": "^0.3.0",
+    "@adamhl8/configs": "^0.4.2",
     "@biomejs/biome": "^2.0.6",
     "@types/bun": "^1.2.17",
-    "globals": "^16.3.0",
     "typescript": "^5.8.3"
   },
   "trustedDependencies": [
