--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "@adamhl8/configs/tsconfig",
   "compilerOptions": {
     "rewriteRelativeImportExtensions": false,
-    "noEmit": true
+    "noEmit": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
