--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "github-stars-to-markdown",
-  "module": "index.ts",
   "type": "module",
+  "module": "index.ts",
   "scripts": {
-    "lint": "tsc --noEmit && biome check --write"
+    "lint": "tsc --noEmit && biome check --write",
+    "prepare": "find .githooks -type f -exec ln -srf {} .git/hooks/ \\;"
   },
   "dependencies": {
     "ts-explicit-errors": "^2.2.0"
@@ -14,7 +15,5 @@
     "@types/bun": "^1.2.18",
     "typescript": "^5.8.3"
   },
-  "trustedDependencies": [
-    "@biomejs/biome"
-  ]
+  "trustedDependencies": ["@biomejs/biome"]
 }
