--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "@adamhl8/configs/tsconfig",
   "compilerOptions": {
-    "rewriteRelativeImportExtensions": false,
-    "noEmit": true,
     "paths": {
+      "~/*": ["./src/*"],
       "@/*": ["./src/*"]
-    }
+    },
+    "rewriteRelativeImportExtensions": false,
+    "noEmit": true
   }
 }
