--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "module": "index.ts",
   "scripts": {
-    "lint": "tsc --noEmit && biome check --write",
+    "lint": "markdown-toc -i --bullets '-' --maxdepth 3 ./README.md && tsc --noEmit && biome check --write && adamhl8-knip",
     "prepare": "find .githooks -type f -exec ln -srf {} .git/hooks/ \\; || true"
   },
   "dependencies": {
